--- a/index.html
+++ b/index.html
@@ -4,24 +4,24 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="shortcut icon" href="./imgfavicon.png" type="image/x-icon" />
+    <link rel="shortcut icon" href="./img/favicon.png" type="image/x-icon" />
     <link rel="stylesheet" href="./css/style.css" />
     <title>FrontEnd I</title>
   </head>
   <body>
     <header>
       <img
-        src="./imgbg-tablet-pattern.svg"
+        src="./img/bg-tablet-pattern.svg"
         alt="orange-background"
         class="orange-piece1"
       />
       <img
-        src="./imgbg-tablet-pattern.svg"
+        src="./img/bg-tablet-pattern.svg"
         alt="orange-background"
         class="orange-piece2"
       />
       <nav>
-        <img src="./imglogo.svg" alt="logo" />
+        <img src="./img/logo.svg" alt="logo" />
         <ul type="none">
           <li><a href="#">Pircing</a></li>
           <li><a href="#">Product</a></li>
@@ -52,7 +52,7 @@
           </div>
         </div>
         <div class="graphics">
-          <img src="./imgIlustracion.svg" alt="Graphics" />
+          <img src="./img/Ilustracion.svg" alt="Graphics" />
         </div>
       </section>
       <section class="secundary-section">
@@ -104,7 +104,7 @@
         <h2>What they've said</h2>
         <div class="customer-carousel">
           <div class="card-hidden">
-            <img src="./imgnino-bravo1.png" alt="Nino Bravo picture" />
+            <img src="./img/nino-bravo1.png" alt="Nino Bravo picture" />
             <p class="name-customer">Nino Bravo</p>
             <p>
               “Manage has supercharged our team´s workflow. The ability to
@@ -113,7 +113,7 @@
             </p>
           </div>
           <div class="card">
-            <img src="./imgnino-bravo2.png" alt="Nino Bravo picture" />
+            <img src="./img/nino-bravo2.png" alt="Nino Bravo picture" />
             <p class="name-customer">Nino Bravo</p>
             <p>
               “We have been able to cancel so many other subscriptions since
@@ -122,7 +122,7 @@
             </p>
           </div>
           <div class="card-hidden">
-            <img src="./imgnino-bravo3.png" alt="Nino Bravo picture" />
+            <img src="./img/nino-bravo3.png" alt="Nino Bravo picture" />
             <p class="name-customer">Nino Bravo</p>
             <p>
               “Manage allows us to provide structure and process. It keeps us
@@ -144,7 +144,7 @@
     <footer>
       <div class="left-footer">
         <div>
-          <img src="./imgwhite-logo.svg" alt="logo" />
+          <img src="./img/white-logo.svg" alt="logo" />
         </div>
         <div class="social-networks">
           <a href="https://es-la.facebook.com/">
